src/styles.css
@import 'tailwindcss';
@plugin '@tailwindcss/typography';

@custom-variant dark (&:where([data-theme="dark"], [data-theme="dark"] *));

@theme {
  --font-sans: Inter, ui-sans-serif, system-ui, sans-serif;
}

:root {
  --clr-bg-primary: var(--color-slate-100);
  --clr-bg-secondary: var(--color-slate-50);
  --clr-bg-tertiary: var(--color-slate-300);
  --clr-accent: var(--color-violet-800);
  --clr-text-primary: var(--color-slate-900);
  --clr-btn-primary: var(--color-violet-600);

  --size-sidebar: 320px;

  @apply selection:bg-violet-600 selection:text-white;

  &[data-theme='dark'] {
    /* Dark theme variables go here */
    --clr-bg-primary: var(--color-slate-900);
    --clr-bg-secondary: var(--color-slate-800);
    --clr-bg-tertiary: var(--color-slate-950);
    --clr-accent: var(--color-violet-400);
    --clr-text-primary: var(--color-slate-100);
  }
}

* {
  box-sizing: border-box;
}

html {
  scrollbar-gutter: stable;
}

html,
body,
#app {
  min-height: 100%;
}

body {
  margin: 0;
  font-family: var(--font-sans);
  background-color: var(--clr-bg-primary);
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.container {
  @apply mx-auto max-w-4xl;
}

.btn {
  @apply inline-block cursor-pointer rounded-md bg-slate-600 px-4 py-2 font-bold text-white;
}

.btn[data-btn-type='primary'] {
  @apply bg-(--clr-btn-primary);
}

.visually-hidden:not(:focus):not(:active) {
  position: absolute;
  width: 1px;
  height: 1px;
  overflow: hidden;
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  white-space: nowrap;
}

